--- a/src/main.html
+++ b/src/main.html
@@ -159,9 +159,7 @@
 			</div>
 		</div>
 
-
-
-		<div class="section section-full-screen section-signup" style="background-image: url('../logo.png'); opacity: 0.7; background-size: cover; background-position: top center; min-height: 700px;">
+		<div class="section section-full-screen section-signup" style="background-image: url('../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4">
