--- a/src/main.html
+++ b/src/main.html
@@ -48,12 +48,12 @@
 	    	<ul class="nav navbar-nav navbar-right">
 				<li>
 					<a href="../components-documentation.html" target="_blank">
-						<i class="material-icons">dashboard</i> Find One
+						<i class="material-icons">search</i> Find One
 					</a>
 				</li>
 				<li>
 					<a href="http://demos.creative-tim.com/material-kit-pro/presentation.html?ref=utp-freebie" target="_blank">
-						<i class="material-icons">unarchive</i> Register your Missing One
+						<i class="material-icons">mic</i> Register your Missing One
 					</a>
 				</li>
 	    	</ul>
@@ -78,39 +78,15 @@
 	</div>
 
 	<div class="main main-raised">
-		<div class="section section-basic">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12">
-						<div class="section">
-							<div class="container text-center">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2 text-center">
-										<h2>Detail's</h2>
-										<h4>
-											this is dummy text detail this is dummy text detail this is dummy text detail
-											this is dummy text detail this is dummy text detail this is dummy text detail
-											this is dummy text detail this is dummy text detail this is dummy text detail
-										</h4>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- End Section Tabs -->
-
-	    <div class="section" id="carousel">
+		<div class="section" id="carousel">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
+						<h2>Recently Added..</h2>
 
 						<!-- Carousel Card -->
 						<div class="card card-raised card-carousel">
-							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+							<div id="carousel-example-generic" class="carousel slide" style="background: #555555" data-ride="carousel">
 								<div class="carousel slide" data-ride="carousel">
 
 									<!-- Indicators -->
@@ -123,21 +99,21 @@
 									<!-- Wrapper for slides -->
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="../assets/img/bg2.jpeg" alt="Awesome Image">
+											<img src="http://b.dryicons.com/images/icon_sets/shine_icon_set/png/256x256/female_business_user.png" alt="Awesome Image">
 											<div class="carousel-caption">
-												<h4><i class="material-icons">location_on</i> Yellowstone National Park, United States</h4>
+												<h4>User One, United States<i class="material-icons">location_on</i></h4>
 											</div>
 										</div>
 										<div class="item">
-											<img src="../assets/img/bg3.jpeg" alt="Awesome Image">
+											<img src="https://cdn0.iconfinder.com/data/icons/PRACTIKA/256/user.png" alt="Awesome Image">
 											<div class="carousel-caption">
-												<h4><i class="material-icons">location_on</i> Somewhere Beyond, United States</h4>
+												<h4>User Two, England<i class="material-icons">location_on</i></h4>
 											</div>
 										</div>
 										<div class="item">
-											<img src="../assets/img/bg4.jpeg" alt="Awesome Image">
+											<img src="http://wcdn3.dataknet.com/static/resources/icons/set47/790d2343.png" alt="Awesome Image">
 											<div class="carousel-caption">
-												<h4><i class="material-icons">location_on</i> Yellowstone National Park, United States</h4>
+												<h4>User Three, France<i class="material-icons">location_on</i></h4>
 											</div>
 										</div>
 									</div>
@@ -159,6 +135,28 @@
 			</div>
 		</div>
 
+		<div class="section section-basic">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 col-sm-12">
+						<div class="section">
+							<div class="container text-center">
+								<div class="row">
+									<div class="col-md-8 col-md-offset-2 text-center">
+										<h4>
+											this is dummy text detail this is dummy text detail this is dummy text detail
+											this is dummy text detail this is dummy text detail this is dummy text detail
+											this is dummy text detail this is dummy text detail this is dummy text detail
+										</h4>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="section section-full-screen section-signup" style="background-image: url('../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
 			<div class="container">
 				<div class="row">
@@ -166,33 +164,16 @@
 						<div class="card card-signup">
 							<form class="form" method="" action="">
 								<div class="header header-primary text-center">
+									<!--<i class="material-icons">group</i>-->
 									<h4>
-										Register Your Love One <br>
+										Let's start finding your Love One <br>
 										today!
 									</h4>
 								</div>
 								<div class="content">
-
-									<div class="input-group">
-										<span class="input-group-addon">
-											<i class="material-icons">face</i>
-										</span>
-										<input type="text" class="form-control" placeholder="First Name...">
-									</div>
-
-									<div class="input-group">
-										<span class="input-group-addon">
-											<i class="material-icons">email</i>
-										</span>
-										<input type="text" class="form-control" placeholder="Email...">
-									</div>
-
-									<div class="input-group">
-										<span class="input-group-addon">
-											<i class="material-icons">lock_outline</i>
-										</span>
-										<input type="password" placeholder="Password..." class="form-control" />
-									</div>
+									<input type="text" class="form-control" placeholder="Your Name">
+									<input type="text" class="form-control" placeholder="Contact">
+									<input type="text" class="form-control" placeholder="Address">
 
 									<!-- If you want to add a checkbox to this form, uncomment this code
 
@@ -202,6 +183,9 @@
 											Subscribe to newsletter
 										</label>
 									</div> -->
+								</div>
+								<div class="footer text-center">
+									<a href="javascript:" class="btn btn-simple btn-primary btn-lg">Get Started</a>
 								</div>
 							</form>
 						</div>
