refactored main page

--- a/src/main.html
+++ b/src/main.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="../assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Material Kit by Creative Tim</title>
+	<title>Missingzone.pk</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -73,63 +73,93 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
-
 	<div class="main main-raised">
-		<div class="section" id="carousel">
+		<!--<div class="section" id="carousel">-->
+			<!--<div class="container">-->
+				<!--<div class="row">-->
+					<!--<div class="col-md-8 col-md-offset-2">-->
+						<!--<h2>Recently Added..</h2>-->
+
+						<!--&lt;!&ndash; Carousel Card &ndash;&gt;-->
+						<!--<div class="card card-raised card-carousel">-->
+							<!--<div id="carousel-example-generic" class="carousel slide" style="background: #555555" data-ride="carousel">-->
+								<!--<div class="carousel slide" data-ride="carousel">-->
+
+									<!--&lt;!&ndash; Indicators &ndash;&gt;-->
+									<!--<ol class="carousel-indicators">-->
+										<!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+										<!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+										<!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+									<!--</ol>-->
+
+									<!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+									<!--<div class="carousel-inner">-->
+										<!--<div class="item active">-->
+											<!--<img src="http://b.dryicons.com/images/icon_sets/shine_icon_set/png/256x256/female_business_user.png" alt="Awesome Image">-->
+											<!--<div class="carousel-caption">-->
+												<!--<h4>User One, United States<i class="material-icons">location_on</i></h4>-->
+											<!--</div>-->
+										<!--</div>-->
+										<!--<div class="item">-->
+											<!--<img src="https://cdn0.iconfinder.com/data/icons/PRACTIKA/256/user.png" alt="Awesome Image">-->
+											<!--<div class="carousel-caption">-->
+												<!--<h4>User Two, England<i class="material-icons">location_on</i></h4>-->
+											<!--</div>-->
+										<!--</div>-->
+										<!--<div class="item">-->
+											<!--<img src="http://wcdn3.dataknet.com/static/resources/icons/set47/790d2343.png" alt="Awesome Image">-->
+											<!--<div class="carousel-caption">-->
+												<!--<h4>User Three, France<i class="material-icons">location_on</i></h4>-->
+											<!--</div>-->
+										<!--</div>-->
+									<!--</div>-->
+
+									<!--&lt;!&ndash; Controls &ndash;&gt;-->
+									<!--<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">-->
+										<!--<i class="material-icons">keyboard_arrow_left</i>-->
+									<!--</a>-->
+									<!--<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">-->
+										<!--<i class="material-icons">keyboard_arrow_right</i>-->
+									<!--</a>-->
+								<!--</div>-->
+							<!--</div>-->
+						<!--</div>-->
+						<!--&lt;!&ndash; End Carousel Card &ndash;&gt;-->
+
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<div class="section">
 			<div class="container">
-				<div class="row">
+				<div class="row tim-row">
+					<h2 class="text-center">Short Description and Usage</h2>
+					<legend></legend>
 					<div class="col-md-8 col-md-offset-2">
-						<h2>Recently Added..</h2>
-
-						<!-- Carousel Card -->
-						<div class="card card-raised card-carousel">
-							<div id="carousel-example-generic" class="carousel slide" style="background: #555555" data-ride="carousel">
-								<div class="carousel slide" data-ride="carousel">
-
-									<!-- Indicators -->
-									<ol class="carousel-indicators">
-										<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-										<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-										<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-									</ol>
-
-									<!-- Wrapper for slides -->
-									<div class="carousel-inner">
-										<div class="item active">
-											<img src="http://b.dryicons.com/images/icon_sets/shine_icon_set/png/256x256/female_business_user.png" alt="Awesome Image">
-											<div class="carousel-caption">
-												<h4>User One, United States<i class="material-icons">location_on</i></h4>
-											</div>
-										</div>
-										<div class="item">
-											<img src="https://cdn0.iconfinder.com/data/icons/PRACTIKA/256/user.png" alt="Awesome Image">
-											<div class="carousel-caption">
-												<h4>User Two, England<i class="material-icons">location_on</i></h4>
-											</div>
-										</div>
-										<div class="item">
-											<img src="http://wcdn3.dataknet.com/static/resources/icons/set47/790d2343.png" alt="Awesome Image">
-											<div class="carousel-caption">
-												<h4>User Three, France<i class="material-icons">location_on</i></h4>
-											</div>
-										</div>
-									</div>
-
-									<!-- Controls -->
-									<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-										<i class="material-icons">keyboard_arrow_left</i>
-									</a>
-									<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-										<i class="material-icons">keyboard_arrow_right</i>
-									</a>
-								</div>
-							</div>
-						</div>
-						<!-- End Carousel Card -->
-
+						<p>
+							<b>Missingzone.Pk</b> is a beautiful resource built for Bootstrap. It was made over the powerful <a href="http://fezvrasta.github.io/bootstrap-material-design/" target="_blank">Bootstrap Material Design</a>. We used and have redesigned all components to make it look flat, minimalist and easy to use. We are proud of this new Bootstrap skin and the possibilities for customisation.
+						</p>
+						<p>
+							We provide all the necessary CSS resources. To get going, just include <code>assets/css/material-kit.css</code> in your HTML template. Your project will get the new look.
+						</p>
+					</div>
+				</div>
+				<div class="row tim-row">
+					<h2 class="text-center">Basic Requirement</h2>
+					<legend></legend>
+					<div class="col-md-8 col-md-offset-2">
+						<p>
+							Here is the list of Bootstrap 3 components that were restyled in <b>Missingzone.PK</b>
+						<ul>
+							<li> First Name</li>
+							<li> Last Name</li>
+							<li> Picture</li>
+							<li> Contact</li>
+							<li> Address</li>
+						</ul>
+						</p>
 					</div>
 				</div>
 			</div>
