refactored main page

--- a/src/main.html
+++ b/src/main.html
@@ -68,7 +68,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="brand">
-						<h1>Missingzone.</h1>
+						<h1>Missingzone.PK</h1>
 						<h3>A better place to find someone.</h3>
 					</div>
 				</div>
