--- a/src/main.html
+++ b/src/main.html
@@ -165,27 +165,27 @@
 			</div>
 		</div>
 
-		<div class="section section-basic">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12">
-						<div class="section">
-							<div class="container text-center">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2 text-center">
-										<h4>
-											this is dummy text detail this is dummy text detail this is dummy text detail
-											this is dummy text detail this is dummy text detail this is dummy text detail
-											this is dummy text detail this is dummy text detail this is dummy text detail
-										</h4>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<!--<div class="section section-basic">-->
+			<!--<div class="container">-->
+				<!--<div class="row">-->
+					<!--<div class="col-md-12 col-sm-12">-->
+						<!--<div class="section">-->
+							<!--<div class="container text-center">-->
+								<!--<div class="row">-->
+									<!--<div class="col-md-8 col-md-offset-2 text-center">-->
+										<!--<h4>-->
+											<!--this is dummy text detail this is dummy text detail this is dummy text detail-->
+											<!--this is dummy text detail this is dummy text detail this is dummy text detail-->
+											<!--this is dummy text detail this is dummy text detail this is dummy text detail-->
+										<!--</h4>-->
+									<!--</div>-->
+								<!--</div>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
 
 		<div class="section section-full-screen section-signup" style="background-image: url('../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
 			<div class="container">
