move unnecessary files to folders

--- a/examples/landing-page.html
+++ b/examples/landing-page.html
@@ -38,7 +38,7 @@
         	<div class="collapse navbar-collapse" id="navigation-example">
         		<ul class="nav navbar-nav navbar-right">
     				<li>
-    					<a href="../components-documentation.html" target="_blank">
+    					<a href="components-documentation.html" target="_blank">
     						Components
     					</a>
     				</li>
