--- a/src/main.html
+++ b/src/main.html
@@ -47,7 +47,7 @@
 	    <div class="collapse navbar-collapse" id="navigation-index">
 	    	<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="../components-documentation.html" target="_blank">
+					<a href="../examples/components-documentation.html" target="_blank">
 						<i class="material-icons">search</i> Find One
 					</a>
 				</li>
@@ -63,7 +63,7 @@
 <!-- End Navbar -->
 
 <div class="wrapper">
-	<div class="header header-filter" style="background-image: url('../logo.png');">
+	<div class="header header-filter" style="background-image: url('../assets/logo.png');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
