--- a/src/Find.html
+++ b/src/Find.html
@@ -90,7 +90,7 @@
 			<div  class="container" align="center">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4" >
-						<div class="card card-signup" style="width:500px; height:650px; margin-left: -350px;">
+						<div class="card card-signup" style="width:500px; height:600px; margin-left: -350px;">
 							<form class="form" method="" action="">
 								<div  class="header header-primary text-center">
 									<!--<i class="material-icons">group</i>-->
@@ -103,117 +103,6 @@
 <input type="text"  id="f1" class="form-control" style="width:300px; "  placeholder="Full Name">
 
 <input type="text" class="form-control" style="width:300px; "  placeholder="Religion">
-<p style=" text-align:left; font-size:17px; padding-left:85px; font-family:'Cambria'">  Date OF Missing &nbsp;<select  id="f1" required>
-<option>1</option>
-<option>2</option>
-<option>3</option>
-<option>4</option>
-<option>5</option>
-<option>6</option>
-<option>7</option>
-<option>8</option>
-<option>9</option>
-<option>10</option>
-<option>11</option>
-<option>12</option>
-<option>13</option>
-<option>14</option>
-<option>15</option>
-<option>16</option>
-<option>17</option>
-<option>18</option>
-<option>19</option>
-<option>20</option>
-<option>21</option>
-<option>22</option>
-<option>23</option>
-<option>24</option>
-<option>25</option>
-<option>26</option>
-<option>27</option>
-<option>28</option>
-<option>29</option>
-<option>30</option>
-<option>31</option>
-</select>
-<select>
-<option>January</option>
-<option>February</option>
-<option>March</option>
-<option>April</option>
-<option>May</option>
-<option>June</option>
-<option>July</option>
-<option>August</option>
-<option>September</option>
-<option>Otober</option>
-<option>November</option>
-<option>December</option>
-</select>
-<select>
-<option>1947</option>
-<option>1948</option>
-<option>1949</option>
-<option>1950</option>
-<option>1951</option>
-<option>1952</option>
-<option>1953</option>
-<option>1954</option>
-<option>1955</option>
-<option>1956</option>
-<option>1957</option>
-<option>1958</option>
-<option>1959</option>
-<option>1960</option>
-<option>1961</option>
-<option>1962</option>
-<option>1963</option>
-<option>1964</option>
-<option>1965</option>
-<option>1966</option>
-<option>1967</option>
-<option>1968</option>
-<option>1969</option>
-<option>1970</option>
-<option>1981</option>
-<option>1982</option>
-<option>1983</option>
-<option>1984</option>
-<option>1985</option>
-<option>1986</option>
-<option>1987</option>
-<option>1988</option>
-<option>1989</option>
-<option>1980</option>
-<option>1991</option>
-<option>1992</option>
-<option>1993</option>
-<option>1994</option>
-<option>1995</option>
-<option>1996</option>
-<option>1997</option>
-<option>1998</option>
-<option>1999</option>
-<option>2000</option>
-<option>2001</option>
-<option>2002</option>
-<option>2003</option>
-<option>2004</option>
-<option>2005</option>
-<option>2006</option>
-<option>2007</option>
-<option>2008</option>
-<option>2009</option>
-<option>2010</option>
-<option>2011</option>
-<option>2012</option>
-<option>2013</option>
-<option>2014</option>
-<option>2015</option>
-<option>2016</option>
-<option>2017</option>
-</select>
-</p>
 <div class="checkbox">
 	<label>
 		<input  id="f1" type="checkbox" name="optionsCheckboxes">
@@ -224,114 +113,11 @@
 		Female
 	</label>
 </div>
-
 <b style=" text-align:left; font-size:17px; font-family:'Cambria'"> Age &nbsp;</b>
-<select  id="f1" required>
-<option>1</option>
-<option>2</option>
-<option>3</option>
-<option>4</option>
-<option>5</option>
-<option>6</option>
-<option>7</option>
-<option>8</option>
-<option>9</option>
-<option>10</option>
-<option>11</option>
-<option>12</option>
-<option>13</option>
-<option>14</option>
-<option>15</option>
-<option>16</option>
-<option>17</option>
-<option>18</option>
-<option>19</option>
-<option>20</option>
-<option>21</option>
-<option>22</option>
-<option>23</option>
-<option>24</option>
-<option>25</option>
-<option>26</option>
-<option>27</option>
-<option>28</option>
-<option>29</option>
-<option>30</option>
-<option>31</option>
-<option>32</option>
-<option>33</option>
-<option>34</option>
-<option>35</option>
-<option>36</option>
-<option>37</option>
-<option>38</option>
-<option>39</option>
-<option>40</option>
-<option>41</option>
-<option>42</option>
-<option>43</option>
-<option>44</option>
-<option>45</option>
-<option>46</option>
-<option>47</option>
-<option>48</option>
-<option>49</option>
-<option>50</option>
-<option>51</option>
-<option>52</option>
-<option>53</option>
-<option>54</option>
-<option>55</option>
-<option>56</option>
-<option>57</option>
-<option>58</option>
-<option>59</option>
-<option>60</option>
-<option>61</option>
-<option>62</option>
-<option>63</option>
-<option>64</option>
-<option>65</option>
-<option>66</option>
-<option>67</option>
-<option>68</option>
-<option>69</option>
-<option>70</option>
-<option>81</option>
-<option>82</option>
-<option>83</option>
-<option>84</option>
-<option>85</option>
-<option>86</option>
-<option>87</option>
-<option>88</option>
-<option>89</option>
-<option>80</option>
-<option>91</option>
-<option>92</option>
-<option>93</option>
-<option>94</option>
-<option>95</option>
-<option>96</option>
-<option>97</option>
-<option>98</option>
-<option>99</option>
-<option>100</option>
-<option>101</option>
-<option>102</option>
-<option>103</option>
-<option>104</option>
-<option>105</option>
-<option>106</option>
-<option>107</option>
-<option>108</option>
-<option>109</option>
-<option>110</option>
-</select>				
+
 
 	
-<b>&nbsp; Years </b></div><br>
-
+<b>&nbsp; Years </b>
 <textarea class="form-control"  id="f1" placeholder="Describtion Type His/Her Heigt,Weight,Last Seen Place And Other Info." rows="5"></textarea>
 
 																	</div>
